# Amphoreus

./: .gitignore  AGENTS.md  DEPLOY_ALIYUN.md  INTRODUCTION.txt  README copy.md  README.md  app.py  docker-compose.yml  requirements.txt  restore_server.sh  talks.txt
app/: server.py
characters/: entity_settings.json  notes.json
characters/entity_settings_text/: EpieiKeia216.txt  NeiKos496.txt  OreXis945.txt  PhiLia093.txt  SkeMma720.txt
facilities/: 2json.py
frontend/: index.html
frontend/src/: App.vue  style.css
frontend/src/api/: gameApi.js
frontend/src/components/: ChoicePanel.vue  TerminalLog.vue
main/: agent.py  data_export.py  interactive_game.py  main.py  prompt_manager.py  run_export.sh  stage.py
main/config/: API_KEY.txt  api_config.py  api_doc.txt
nginx/: .htpasswd  default.conf  index.html
prompts/base/: black_heir_system.md  decision_format.md  decode_fallback.md  self_reflection.md  system.md
prompts/characters/: ApoRia432.yaml  EleOs252.yaml  EpieiKeia216.yaml  HapLotes405.yaml  HubRis504.yaml  KaLos618.yaml  NeiKos496.yaml  OreXis945.yaml  PoleMos600.yaml  SkeMma720.yaml
prompts/scenes/: black_heir_persuade.md  fire_decision.md  fire_persuade_player.md  handover_decision.md  intro.md  oracle.md  persuade_target.md  player_fire_decision.md  player_handover_decision.md  reconsider.md
visualization_cpp/: CMakeLists.txt
visualization_cpp/src/: dataloader.cpp  dataloader.h  main.cpp  mainwindow.cpp  mainwindow.h  realtimedialog.cpp  realtimedialog.h  rounddetailwidget.cpp  rounddetailwidget.h
(+2 files in other folders)
